--- a/import.ipynb
+++ b/import.ipynb
@@ -61,13 +61,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "name": "python",
-   "version": "undefined.undefined.undefined"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
